--- a/ControleLoja/Views/Produto/Index.cshtml
+++ b/ControleLoja/Views/Produto/Index.cshtml
@@ -5,3 +5,10 @@
 
 <h1>Produto</h1>
 
+<td>
+    @try
+    {
+        <img src="https://static.natura.com/cdn/farfuture/ev8ZcHHOWfDG05LHxYgrz7BBlGBN1u2wBZpse0gtkE0/1584727806/sites/default/files/products/72147_1_2.jpg" width="150" height="150" />
+    }
+    catch { }
+</td>
