--- a/ControleLoja/Views/Home/Login.cshtml
+++ b/ControleLoja/Views/Home/Login.cshtml
@@ -15,7 +15,7 @@
 </head>
 
 <body>
-    <div class="login-form" style="margin-top:250px">
+    <div class="login-form" style="margin-top:150px">
         <form asp-controller="Home" asp-action="Login" method="post">
             <h2 class="text-center">Entrar</h2>
 
@@ -32,8 +32,12 @@
                 <label class="float-left form-check-label"><input type="checkbox"> Lembrar- me</label>
                 <a href="#" class="float-right">Esqueceu a senha?</a>
             </div>
+            <div class="clearfix" style="margin-top:30px">
+                <p class="text-center"><a href="#">Criar conta</a></p>
+            </div>
+
         </form>
-        <p class="text-center"><a href="#">Criar conta</a></p>
+
 
         @{
             ViewData["Valida"] = "";
@@ -44,7 +48,7 @@
 
 <style type="text/css">
     body {
-        background-image: url('../../images/bgMenu.jpg');
+        background-image: url('../../images/nat2.jpg');
         background-size:cover;
        
     }
@@ -57,7 +61,7 @@
 
         .login-form form {
             margin-bottom: 15px;
-            background-color: #EEDC82;
+            background-color: #FFFFFF;
             box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.3);
             padding: 30px;
         }
