Atualizando produtos part2

--- a/ControleLoja/Views/Cliente/Index.cshtml
+++ b/ControleLoja/Views/Cliente/Index.cshtml
@@ -22,9 +22,4 @@
         </select>
     </div>
 
-    @Html.Raw(ViewData["Valida"])
-
-    <button type="submit" class="btn btn-primary">Registrar</button>
-    <button class="btn btn-primary" type="button" onclick="window.location.href ='/Cliente/listacliente'">Lista de Clientes</button>
-
-</form>
+ /form>
