--- a/ControleLoja/Views/Cliente/Index.cshtml
+++ b/ControleLoja/Views/Cliente/Index.cshtml
@@ -16,10 +16,7 @@
         <label asp-for="Email"></label>
         <input type="email" class="form-control" asp-for="Email">
         <input type="hidden" asp-for="Id">
-        <select asp-for="Email">
-            <option></option>
-            <option></option>
-        </select>
+
     </div>
 
- /form>
+</form>
