--- a/ControleLoja/Views/Home/Index.cshtml
+++ b/ControleLoja/Views/Home/Index.cshtml
@@ -8,7 +8,7 @@
     <table class="table table-borderless">
         <tr>
             <td><a href="../cliente/listacliente"><img src="~/images/clientes.png" width="150" height="150" /></a></td>
-            <td><a href="../vendedor/index"><img src="~/images/vendedores.png" width="150" height="150" /></a></td>
+            <td><a href="../vendedor/listavendedor"><img src="~/images/vendedores.png" width="150" height="150" /></a></td>
             <td><a href="../produto/index"><img src="~/images/produtos.png" width="150" height="150" /></a></td>
         </tr>
         <tr>
