Criando Produto index

--- a/ControleLoja/Views/Cliente/Index.cshtml
+++ b/ControleLoja/Views/Cliente/Index.cshtml
@@ -19,4 +19,8 @@
 
     </div>
 
+    @Html.Raw(ViewData["Valida"])
+
+    <button type="submit" class="btn btn-primary">Registrar</button>
+
 </form>
