--- a/ControleLoja/Views/Produto/Index.cshtml
+++ b/ControleLoja/Views/Produto/Index.cshtml
@@ -19,10 +19,10 @@
         <input type="number" class="form-control" asp-for="Qtd">
 
         <label asp-for="Categoria"></label>
-        
+        @Html.DropDownList("GetCategoria")
 
         <label asp-for="Genero"></label>
-
+        @Html.DropDownList("GetGenero")
 
         <label asp-for="Validade"></label>
         <input type="date" class="form-control" asp-for="Validade">
