Atualização de permissões

--- a/ControleLoja/Views/Home/Login.cshtml
+++ b/ControleLoja/Views/Home/Login.cshtml
@@ -16,7 +16,7 @@
 
 <body>
     <div class="login-form" style="margin-top:150px">
-        <form asp-controller="Home" asp-action="Login" method="post">
+        <form asp-controller="Home" asp-action="Logar" method="post">
             <h2 class="text-center">Entrar</h2>
 
             <div class="form-group">
