--- a/ControleLoja/Views/Produto/Index.cshtml
+++ b/ControleLoja/Views/Produto/Index.cshtml
@@ -13,10 +13,10 @@
     <div class="form-group">
         <label asp-for="Nome"></label>
         <input type="text" class="form-control" asp-for="Nome">
-        <label asp-for="PrecoCusto"></label>
-        <input type="text" class="form-control" asp-for="PrecoCusto">
-        <label asp-for="PrecoSugerido"></label>
-        <input type="text" class="form-control" asp-for="PrecoSugerido">
+        <label asp-for="Preco_Custo"></label>
+        <input type="text" class="form-control" asp-for="Preco_Custo">
+        <label asp-for="Preco_Sugerido"></label>
+        <input type="text" class="form-control" asp-for="Preco_Sugerido">
         <label asp-for="Qtd"></label>
         <input type="number" class="form-control" asp-for="Qtd">
 
