--- a/ControleLoja/Views/Shared/_Layout.cshtml
+++ b/ControleLoja/Views/Shared/_Layout.cshtml
@@ -26,8 +26,12 @@
                         </li>
                     </ul>
                 </div>
+            Bem Vindo &nbsp;
+            <b>@ViewData["Nome"]</b> &nbsp;
+            <b><a class=" text-black-50" href="/home/login">(Logout)</a></b>
             </div>
         </nav>
+
     </header>
     <div class="container">
         <main role="main" class="pb-3">
