--- a/ControleLoja/Views/Vendedor/Index.cshtml
+++ b/ControleLoja/Views/Vendedor/Index.cshtml
@@ -20,5 +20,6 @@
     @Html.Raw(ViewData["Valida"])
 
     <button type="submit" class="btn btn-primary">Registrar</button>
+    <button type="button" class="btn btn-warning" onclick="window.location.href='/vendedor/listavendedor'">Voltar</button>
 
 </form>
