--- a/ControleLoja/Views/Cliente/ListaCliente.cshtml
+++ b/ControleLoja/Views/Cliente/ListaCliente.cshtml
@@ -3,48 +3,53 @@
     ViewData["Title"] = "Home Page";
 }
 
-<div class="text-center">
-    <h4>Lista de Clientes</h4>
-    <button class="btn btn-block btn-primary" type="button" onclick="window.location.href ='/Cliente/index'">Cadastrar Cliente</button>
+<div>
+    <table class="table">
+        <tr>
+            <th><h2>Meus Clientes</h2></th>
+            <th></th>
+            <th></th>
+            <th></th>
+            <th class="text-sm-right"><button class="btn btn-primary" type="button" onclick="window.location.href ='/cliente/index'">Novo Cliente</button>
+            <th>
+        </tr>
+    </table>
     @if (Model.Count > 0)
     {
-        <table class="table">
+<table class="table table-striped table-condensed table-hover">
 
-            <thead>
-                <tr>
-                    <th>Código</th>
-                    <th>Nome</th>
-                    <th>Cidade</th>
-                    <th>Celular</th>
-                    <th>Email</th>
-                    <th></th>
-                    <th></th>
-                    <th></th>
-                    <th></th>
-                </tr>
-            </thead>
-            <tbody>
-                @foreach (var item in Model)
-                {
-                    <tr>
-                        <td>@item.Id</td>
-                        <td>@item.Nome</td>
-                        <td>@item.Cidade</td>
-                        <td>@item.Cel</td>
-                        <td>@item.Email</td>
-                        <td><button type="button" class="btn btn-warning" onclick="window.location.href='/cliente/editar?Id=@item.Id&Nome=@item.Nome&Cidade=@item.Cidade&Cel=@item.Cel&Email=@item.Email'">Editar</button></td>
-                        <td><button type="button" class="btn btn-danger" onclick="window.location.href='/cliente/excluir?Id=@item.Id'">Excluir</button></td>
-                    </tr>
-                }
-            </tbody>
-        </table>
-    }
-    else
-    {
-        <div class="alert alert-primary" role="alert">
-            Sem Registros!
-        </div>
-    }
+    <thead>
+        <tr>
+            <th>Código</th>
+            <th>Nome</th>
+            <th>Cidade</th>
+            <th>Celular</th>
+            <th>Email</th>
+            <th></th>
+            <th></th>
+            <th></th>
+            <th></th>
+        </tr>
+    </thead>
+    <tbody>
+        @foreach (var item in Model)
+        {
+<tr>
+    <td>@item.Id</td>
+    <td>@item.Nome</td>
+    <td>@item.Cidade</td>
+    <td>@item.Cel</td>
+    <td>@item.Email</td>
+    <td><button type="button" class="btn btn-warning" onclick="window.location.href='/cliente/editar?Id=@item.Id&Nome=@item.Nome&Cidade=@item.Cidade&Cel=@item.Cel&Email=@item.Email'">Editar</button></td>
+    <td><button type="button" class="btn btn-danger" onclick="window.location.href='/cliente/excluir?Id=@item.Id'">Excluir</button></td>
+</tr>                }
+    </tbody>
+</table> }
+            else
+            {
+<div class="alert alert-primary" role="alert">
+    Sem Registros!
+</div>}
 
     <button class="btn btn-block btn-primary" type="button" onclick="window.location.href ='/Cliente/index'">Cadastrar Cliente</button>
 </div>
