--- a/ControleLoja/Views/Home/Index.cshtml
+++ b/ControleLoja/Views/Home/Index.cshtml
@@ -3,18 +3,22 @@
     ViewData["Title"] = "Index";
 }
 
-
+<h3 class="text-center">
+    Bem Vindo <b>@ViewData["Nome"]</b>
+</h3>
 <div class="row" style="text-align:center; font-family:Arial; font-size:medium; color:#242424;">
+    @if (ViewData["Tipo"].ToString() == "ADM2")
+    {
     <table class="table table-borderless">
         <tr>
             <td><a href="../cliente/listacliente"><img src="~/images/clientes.png" width="150" height="150" /></a></td>
             <td><a href="../vendedor/listavendedor"><img src="~/images/vendedores.png" width="150" height="150" /></a></td>
-            <td><a href="../produto/index"><img src="~/images/produtos.png" width="150" height="150" /></a></td>
+            <td><a href="../produto/listaproduto"><img src="~/images/produtos.png" width="150" height="150" /></a></td>
         </tr>
         <tr>
-            <th><a href="../cliente/index">Clientes</a></th>
-            <th><a href="../vendedor/index">Vendedores</a></th>
-            <th><a href="../produto/index">Produtos</a></th>
+            <th><a href="../cliente/listacliente">Clientes</a></th>
+            <th><a href="../vendedor/listavendedor">Vendedores</a></th>
+            <th><a href="../produto/listaproduto">Produtos</a></th>
         </tr>
 
         <tr>
@@ -28,6 +32,26 @@
             <th><a href="../cliente/index">Configurações</a></th>
         </tr>
     </table>
+    }
+    else
+    {
+    <table>
+            <tr>
+                <td><a href="../vendedor/listavendedor"><img src="~/images/vendedores.png" width="150" height="150" /></a></td>
+                <td><a href="../produto/listaproduto"><img src="~/images/produtos.png" width="150" height="150" /></a></td>
+            </tr>
+            <tr>
+                <th><a href="../vendedor/listavendedor">Vendedores</a></th>
+                <th><a href="../produto/listaproduto">Produtos</a></th>
+            </tr>
+            <tr>
+                <td><a href="../venda/index"><img src="~/images/vendas.png" width="150" height="150" /></a></td>
+            </tr>
+            <tr>
+                <th><a href="../venda/index">Registro de Vendas</a></th>
+            </tr>
+        </table>
+    }
 </div>
 
 
