--- a/ControleLoja/Views/Vendedor/ListaVendedor.cshtml
+++ b/ControleLoja/Views/Vendedor/ListaVendedor.cshtml
@@ -3,20 +3,25 @@
     ViewData["Title"] = "Home Page";
 }
 
-<div class="text-center">
-    <h4>Lista de Vendedores</h4>
-    <button class="btn btn-block btn-primary" type="button" onclick="window.location.href ='/vendedor/index'">Cadastrar Vendedor</button>
+<div>
+    <table class="table">
+        <tr>
+            <th><h2>Lista de Vendedores</h2></th>
+            <th></th>
+            <th></th>
+            <th></th>
+            <th class="text-sm-right"><button class="btn btn-primary" type="button" onclick="window.location.href ='/vendedor/index'">Novo</button><th>
+        </tr>
+    </table>
     @if (Model.Count > 0)
     {
-        <table class="table">
+        <table class="table table-striped table-condensed table-hover">
 
             <thead>
-                <tr>
+                <tr class="container">
                     <th>Código</th>
                     <th>Nome</th>
                     <th>Email</th>
-                    <th></th>
-                    <th></th>
                     <th></th>
                     <th></th>
                 </tr>
@@ -25,7 +30,7 @@
                 @foreach (var item in Model)
                 {
                     <tr>
-                        <td>@item.Id</td>
+                        <td style="height:10px">@item.Id</td>
                         <td>@item.Nome</td>
                         <td>@item.Email</td>
                         <td><button type="button" class="btn btn-warning" onclick="window.location.href='/vendedor/editar?Id=@item.Id&Nome=@item.Nome&Email=@item.Email&senha=@item.Senha'">Editar</button></td>
@@ -42,7 +47,6 @@
         </div>
     }
 
-    <button class="btn btn-block btn-primary" type="button" onclick="window.location.href ='/vendedor/index'">Cadastrar Cliente</button>
 </div>
 
 
