--- a/ControleLoja/Views/Cliente/ListaCliente.cshtml
+++ b/ControleLoja/Views/Cliente/ListaCliente.cshtml
@@ -49,7 +49,8 @@
             {
 <div class="alert alert-primary" role="alert">
     Sem Registros!
-</div>}
+</div>
+    }
 
     <button class="btn btn-block btn-primary" type="button" onclick="window.location.href ='/Cliente/index'">Cadastrar Cliente</button>
 </div>
